# rag-backend

./: .dockerignore  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  openrouter_models.json  pyproject.toml
alembic/: env.py
alembic/versions/: 19f5c53dcb6b_add_model_parameters_to_userllmconfig.py  5e100c5db0ab_initial_table_implementations.py
app/: document_processing.py  llm_manager.py  main.py  worker.py
app/api/: deps.py
app/api/v1/: api.py
app/api/v1/endpoints/: auth.py  chat.py  documents.py  health.py  user_llm_configs.py
app/core/: celery_app.py  config.py  errors.py  exceptions.py  monitoring.py  security.py
app/crud/: crud_chat.py  crud_document.py  crud_user.py  crud_user_llm_config.py
app/database/: base.py  session.py
app/middleware/: auth.py  error_handler.py
app/models/: __init__.py  chat.py  document.py  user.py  user_llm_config.py
app/schemas/: auth.py  chat.py  document.py  user_llm_config.py
app/utils/: file_utils.py  image_utils.py  langchain_utils.py  llm_utils.py  system_messages.py  websocket_manager.py
k8s/: qdrant.Dockerfile
k8s/base/: deployment.yaml  kustomization.yaml  persistent-volumes.yaml  secrets.yaml  service.yaml
